--- a/sass/components/_customers-section.scss
+++ b/sass/components/_customers-section.scss
@@ -1,3 +1,8 @@
+.customers {
+  @extend .team;
+  background-color: $accent-color;
+}
+
 .customers-list {
   display: flex;
   align-items: center;
