--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -94,7 +94,7 @@
   // height: 453px;
   padding-top: 60px;
   padding-bottom: 60px;
-  z-index: 100;
+  // z-index: 100;
   border-top: 1px solid #ececec;
 
   position: absolute;
