--- a/css/main.css
+++ b/css/main.css
@@ -63,14 +63,27 @@ input[type="radio"].visually-hidden {
   overflow: hidden;
 }
 
-.team {
+.team, .customers {
   padding-top: 60px;
   padding-bottom: 60px;
   background-color: #f5f4fa;
 }
 
 @media screen and (min-width: 1200px) {
-  .team {
+  .team, .customers {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
+}
+
+.section, .main-content, .team, .customers {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background-color: #ffffff;
+}
+
+@media screen and (min-width: 1200px) {
+  .section, .main-content, .team, .customers {
     padding-top: 94px;
     padding-bottom: 94px;
   }
@@ -206,7 +219,6 @@ input[type="radio"].visually-hidden {
   width: 100%;
   padding-top: 60px;
   padding-bottom: 60px;
-  z-index: 100;
   border-top: 1px solid #ececec;
   position: absolute;
   top: 100%;
@@ -442,38 +454,38 @@ input[type="radio"].visually-hidden {
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
-  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.8), rgba(47, 48, 58, 0.8)), url("../../img-adaptive/Header img.png");
+  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.8), rgba(47, 48, 58, 0.8)), url("../../img-adaptive/header.png");
 }
 
 @media screen and (min-device-pixel-ratio: 2), screen and (min-resolution: 192dpi), screen and (min-resolution: 2dppx) {
   .hero {
-    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../../img-adaptive/Header img@2x.png");
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../../img-adaptive/header@2x.png");
   }
 }
 
 @media screen and (min-width: 768px) {
   .hero {
     height: 400px;
-    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../../img-adaptive/Headertablet.jpg");
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../../img-adaptive/headertablet.jpg");
   }
 }
 
 @media screen and (min-width: 768px) and (min-device-pixel-ratio: 2), screen and (min-width: 768px) and (min-resolution: 192dpi), screen and (min-width: 768px) and (min-resolution: 2dppx) {
   .hero {
-    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../../img-adaptive/Header tablet@2x.jpg");
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../../img-adaptive/headertablet@2x.jpg");
   }
 }
 
 @media screen and (min-width: 1200px) {
   .hero {
     height: 600px;
-    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../../img-adaptive/Desktop.jpg");
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../../img-adaptive/desktop.jpg");
   }
 }
 
 @media screen and (min-width: 1200px) and (min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (min-resolution: 192dpi), screen and (min-width: 1200px) and (min-resolution: 2dppx) {
   .hero {
-    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../../img-adaptive/Desktop@2x.jpg");
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../../img-adaptive/desktop@2x.jpg");
   }
 }
 
@@ -573,11 +585,6 @@ input[type="radio"].visually-hidden {
   }
 }
 
-.section {
-  padding-top: 94px;
-  padding-bottom: 94px;
-}
-
 .main-content-list {
   display: flex;
 }
@@ -627,17 +634,8 @@ input[type="radio"].visually-hidden {
   }
 }
 
-.team {
-  padding-top: 60px;
-  padding-bottom: 60px;
+.team, .customers {
   background-color: #f5f4fa;
-}
-
-@media screen and (min-width: 1200px) {
-  .team {
-    padding-top: 94px;
-    padding-bottom: 94px;
-  }
 }
 
 @media screen and (min-width: 768px) {
@@ -730,6 +728,10 @@ input[type="radio"].visually-hidden {
   .team-socials-list {
     margin: 0 auto;
   }
+}
+
+.customers {
+  background-color: #ffffff;
 }
 
 .customers-list {
@@ -872,14 +874,14 @@ footer {
   color: #ffffff;
 }
 
-.form-field {
+footer .form-field {
   display: flex;
   align-items: center;
   flex-direction: column;
 }
 
 @media screen and (min-width: 768px) {
-  .form-field {
+  footer .form-field {
     display: flex;
     flex-direction: column;
   }
@@ -889,7 +891,7 @@ footer {
   margin: 0 auto;
 }
 
-.form-label {
+footer .form-label {
   display: block;
   font-weight: bold;
   letter-spacing: 0.03em;
@@ -941,6 +943,18 @@ footer {
 .form-footer .form-label {
   display: block;
   margin-bottom: 20px;
+}
+
+@media screen and (min-width: 1200px) {
+  .form-footer .form-label {
+    margin: 0;
+    margin-bottom: 20px;
+    align-self: flex-start;
+    font-weight: bold;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: #ffffff;
+  }
 }
 
 .form-footer .footer-input {
@@ -1028,14 +1042,6 @@ footer {
     display: flex;
     align-items: center;
     margin: 0;
-  }
-  .form-label {
-    align-self: flex-start;
-    margin: 0;
-    font-weight: bold;
-    letter-spacing: 0.03em;
-    text-transform: uppercase;
-    color: #ffffff;
   }
   .footer-input {
     width: 358px;
