--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -82,7 +82,7 @@ footer {
   color: $accent-color;
 }
 
-.form-field {
+footer .form-field {
   display: flex;
   align-items: center;
   flex-direction: column;
@@ -97,7 +97,7 @@ footer {
   margin: 0 auto;
 }
 
-.form-label {
+footer .form-label {
   display: block;
   font-weight: bold;
   letter-spacing: 0.03em;
@@ -154,6 +154,16 @@ footer {
 .form-footer .form-label {
   display: block;
   margin-bottom: 20px;
+
+  @include desktop() {
+    margin: 0;
+    margin-bottom: 20px;
+    align-self: flex-start;
+    font-weight: bold;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: $accent-color;
+  }
 }
 
 .form-footer .footer-input {
@@ -259,15 +269,6 @@ footer {
     display: flex;
     align-items: center;
     margin: 0;
-  }
-
-  .form-label {
-    align-self: flex-start;
-    margin: 0;
-    font-weight: bold;
-    letter-spacing: 0.03em;
-    text-transform: uppercase;
-    color: $accent-color;
   }
 
   .footer-input {
