--- a/sass/util/_placeholders.scss
+++ b/sass/util/_placeholders.scss
@@ -1,3 +1,14 @@
+.section {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background-color: $accent-color;
+
+  @include desktop() {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
+}
+
 %section {
   padding-bottom: 94px;
   padding-top: 94px;
