--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -1,10 +1,16 @@
 .footer-contacts {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   margin: 0 auto;
   text-align: center;
   margin-bottom: 60px;
 
   @include desktop() {
-    text-align: left;
+    margin: 0;
+    width: 235px;
+    display: flex;
+    flex-direction: column;
   }
 }
 
@@ -18,6 +24,14 @@
 .main-footer {
   padding-top: 60px;
   padding-bottom: 60px;
+
+  @include desktop() {
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+    padding-top: 60px;
+    padding-bottom: 60px;
+  }
 }
 
 footer {
@@ -28,11 +42,15 @@ footer {
   @extend .site-logo;
   margin-bottom: 20px;
   padding: 0;
-
   color: $accent-color;
 
   @include tablet() {
     margin: 0 auto;
+  }
+
+  @include desktop {
+    margin-bottom: 20px;
+    margin-left: 0;
   }
 }
 
@@ -52,6 +70,10 @@ footer {
   font-weight: 400;
   line-height: 1.7;
   color: rgba(255, 255, 255, 0.6);
+
+  @include desktop() {
+    display: flex;
+  }
 }
 
 .mail {
@@ -62,6 +84,14 @@ footer {
   margin: 0 auto;
   margin-bottom: 60px;
   width: 206px;
+
+  @include desktop() {
+    margin-left: 75px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    margin-right: 94px;
+  }
 }
 
 .footer-socials-list a {
@@ -80,6 +110,10 @@ footer {
   font-weight: 700;
   text-transform: uppercase;
   color: $accent-color;
+
+  @include desktop() {
+    align-self: flex-start;
+  }
 }
 
 footer .form-field {
@@ -95,6 +129,12 @@ footer .form-field {
 
 .form-frame {
   margin: 0 auto;
+
+  @include desktop() {
+    display: flex;
+    align-items: baseline;
+    margin: 0;
+  }
 }
 
 footer .form-label {
@@ -117,6 +157,11 @@ footer .form-label {
   outline: none;
 
   background-color: #2f303a;
+
+  @include desktop() {
+    width: 358px;
+    height: 46px;
+  }
 }
 
 .form-frame input::placeholder {
@@ -141,6 +186,13 @@ footer .form-label {
     padding-top: 13px;
     padding-bottom: 13px;
     padding-left: 26px;
+
+    @include desktop() {
+      margin-left: 12px;
+      display: inline-flex;
+      align-items: center;
+      border: none;
+    }
   }
 
   &-icon {
@@ -148,7 +200,15 @@ footer .form-label {
     top: 25%;
     right: 13px;
     fill: $accent-color;
+
+    @include desktop() {
+      margin-left: 10px;
+    }
   }
+}
+
+.form-footer .footer-input {
+  margin-bottom: 0;
 }
 
 .form-footer .form-label {
@@ -172,138 +232,9 @@ footer .form-label {
 }
 
 @include desktop() {
-  .footer-contacts {
-    margin: 0;
-    width: 235px;
-  }
-
-  .main-footer {
-    display: flex;
-    align-items: flex-start;
-    justify-content: space-between;
-    padding-top: 60px;
-    padding-bottom: 60px;
-  }
-
-  footer {
-    background-color: #2f303a;
-  }
-
-  .site-logo {
-    display: block;
-    margin-right: 85px;
-
-    text-decoration: none;
-    font-family: Raleway, sans-serif;
-    font-weight: 700;
-    font-size: 26px;
-    line-height: 1.2;
-    color: $primary-text-color;
-  }
-
-  .bottom {
-    display: flex;
-    margin-right: 0;
-    margin-bottom: 20px;
-    padding: 0;
-
-    color: $accent-color;
-  }
-
-  .adress-street {
-    margin-bottom: 9px;
-
-    font-style: normal;
-    font-weight: 400;
-    line-height: 1.7;
-    color: $accent-color;
-  }
-
-  .address-link {
-    display: flex;
-
-    text-decoration: none;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 1.7;
-    color: rgba(255, 255, 255, 0.6);
-  }
-
-  .mail {
-    margin-bottom: 9px;
-  }
-
-  .footer-socials {
-    margin-left: 75px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    margin-right: 94px;
-  }
-
-  .footer-socials-list a {
-    text-decoration: none;
-  }
-
-  .footer-socials-list {
-    display: flex;
-    justify-content: space-between;
-  }
-
-  .footer-text {
-    align-self: flex-start;
-    margin-bottom: 20px;
-
-    font-weight: 700;
-    text-transform: uppercase;
-    color: $accent-color;
-  }
-
   .sign-up {
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-  }
-
-  .form-frame {
-    display: flex;
-    align-items: center;
-    margin: 0;
-  }
-
-  .footer-input {
-    width: 358px;
-    height: 46px;
-    padding-left: 16px;
-    border-radius: 4px;
-    border: 1px solid rgba(255, 255, 255, 0.3);
-    color: $accent-color;
-    outline: none;
-
-    background-color: #2f303a;
-  }
-
-  .form-frame input::placeholder {
-    color: rgba(255, 255, 255, 0.6);
-    font-size: 16px;
-    line-height: 20px;
-    letter-spacing: 0.03em;
-  }
-
-  .button {
-    &-sign-up {
-      margin-left: 12px;
-      display: inline-flex;
-      align-items: center;
-      border: none;
-    }
-
-    &-icon {
-      fill: $accent-color;
-      margin-left: 10px;
-    }
-  }
-  .form-footer .footer-input {
-    margin-bottom: 0;
   }
 }
