--- a/css/main.css
+++ b/css/main.css
@@ -127,7 +127,7 @@ input[type="radio"].visually-hidden {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.socials-icons:hover, .socials-icons:focus {
+.team-social-link-item:hover .socials-icons {
   fill: #ffffff;
 }
 
@@ -561,7 +561,7 @@ input[type="radio"].visually-hidden {
 
 @media screen and (min-width: 1200px) {
   .features-list-item {
-    width: calc((100% - 90px) / 4);
+    width: calc((100% - 120px) / 4);
     margin: 15px;
   }
 }
