--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -127,7 +127,7 @@ input[type="radio"].visually-hidden {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.socials-icons:hover, .socials-icons:focus {
+.team-social-link-item:hover .socials-icons {
   fill: #ffffff;
 }
 
