--- a/css/main.css
+++ b/css/main.css
@@ -408,6 +408,10 @@ input[type="radio"].visually-hidden {
   }
 }
 
+header {
+  border: 1px solid #ececec;
+}
+
 .container-hero {
   display: flex;
   flex-direction: column;
@@ -519,6 +523,8 @@ input[type="radio"].visually-hidden {
 }
 
 .features-title {
+  font-size: 14px;
+  line-height: 1.14;
   font-weight: 700;
   text-transform: uppercase;
   margin: 30px 0 10px;
@@ -650,7 +656,7 @@ input[type="radio"].visually-hidden {
 @media screen and (min-width: 1200px) {
   .team-list {
     display: flex;
-    flex-wrap: no-wrap;
+    flex-wrap: nowrap;
   }
 }
 
