--- a/sass/components/_features-section.scss
+++ b/sass/components/_features-section.scss
@@ -10,6 +10,8 @@
 
 .features {
   &-title {
+    font-size: 14px;
+    line-height: 1.14;
     font-weight: 700;
     text-transform: uppercase;
     margin: 30px 0 10px;
