--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -505,6 +505,10 @@ header {
   margin-bottom: 0;
 }
 
+.example-list-item:hover {
+  box-shadow: 1px 4px 6px rgba(0, 0, 0, 0.16), 0px 4px 4px rgba(0, 0, 0, 0.06), 0px 1px 1px rgba(0, 0, 0, 0.12);
+}
+
 @media screen and (min-width: 768px) {
   .example-list-item:nth-child(even) {
     margin-right: 0;
@@ -572,7 +576,6 @@ header {
   border-bottom: 1px solid #eeeeee;
   border-right: 1px solid #eeeeee;
   border-left: 1px solid #eeeeee;
-  box-shadow: 1px 4px 6px rgba(0, 0, 0, 0.16), 0px 4px 4px rgba(0, 0, 0, 0.06), 0px 1px 1px rgba(0, 0, 0, 0.12);
 }
 
 .example-list-title {
