--- a/css/main.css
+++ b/css/main.css
@@ -1078,14 +1078,12 @@ footer .form-label {
   visibility: visible;
   pointer-events: initial;
   overflow-y: scroll;
-  transform: scale(1);
-  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .backdrop.is-hidden {
   opacity: 0;
   visibility: hidden;
-  transform: scale(0);
   pointer-events: none;
 }
 
@@ -1093,7 +1091,7 @@ footer .form-label {
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%) scaleX(0);
   height: 609px;
   width: 450px;
   padding: 40px;
@@ -1107,6 +1105,11 @@ footer .form-label {
     min-height: 581px;
     min-width: 528px;
   }
+}
+
+.modal.is-open {
+  transform: translate(-50%, -50%) scaleX(1);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .button-modal {
