--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -10,15 +10,13 @@
   visibility: visible;
   pointer-events: initial;
   overflow-y: scroll;
-  transform: scale(1);
-  transition: opacity 250ms $cubic-timing,
-    transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  transition: opacity 250ms $cubic-timing;
 }
 
 .backdrop.is-hidden {
   opacity: 0;
   visibility: hidden;
-  transform: scale(0);
   pointer-events: none;
 }
 
@@ -26,7 +24,7 @@
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%) scaleX(0);
 
   height: 609px;
   width: 450px;
@@ -41,6 +39,12 @@
     min-height: 581px;
     min-width: 528px;
   }
+}
+
+.modal.is-open {
+  transform: translate(-50%, -50%) scaleX(1);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .button-modal {
