--- a/sass/portfolio/_main-section.scss
+++ b/sass/portfolio/_main-section.scss
@@ -82,6 +82,11 @@
     margin-bottom: 0;
   }
 
+  &:hover {
+    box-shadow: 1px 4px 6px rgba(0, 0, 0, 0.16), 0px 4px 4px rgba(0, 0, 0, 0.06),
+      0px 1px 1px rgba(0, 0, 0, 0.12);
+  }
+
   @include tablet() {
     &:nth-child(even) {
       margin-right: 0;
@@ -157,8 +162,6 @@
   border-bottom: 1px solid #eeeeee;
   border-right: 1px solid #eeeeee;
   border-left: 1px solid #eeeeee;
-  box-shadow: 1px 4px 6px rgba(0, 0, 0, 0.16), 0px 4px 4px rgba(0, 0, 0, 0.06),
-    0px 1px 1px rgba(0, 0, 0, 0.12);
 }
 
 .example-list-title {
