--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -271,12 +271,17 @@
   .menu-wrapper {
     display: flex;
     align-items: center;
+    justify-content: space-between;
     padding: 0;
     position: static;
   }
 
   .site-navigation-contacts {
     margin: 0;
+  }
+
+  .menu-wrapper .site-navigation-contacts {
+    text-align: left;
   }
 
   .page-nav {
