--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -10,6 +10,7 @@ body {
 }
 
 .container {
+  width: 100%;
   padding-left: 15px;
   padding-right: 15px;
   margin: 0 auto;
@@ -374,15 +375,15 @@ input[type="radio"].visually-hidden {
   .menu-wrapper {
     display: flex;
     align-items: center;
+    justify-content: space-between;
     padding: 0;
     position: static;
   }
   .site-navigation-contacts {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
     margin: 0;
-    margin-left: 85px;
+  }
+  .menu-wrapper .site-navigation-contacts {
+    text-align: left;
   }
   .page-nav {
     display: flex;
@@ -403,7 +404,7 @@ input[type="radio"].visually-hidden {
 @media screen and (min-width: 1200px) {
   .site-navigation-contacts {
     align-items: center;
-    flex-direction: row;
+    display: flex;
     margin-left: auto;
   }
 }
@@ -495,7 +496,7 @@ header {
 }
 
 .example-list-item {
-  width: 450px;
+  width: 100%;
   margin-bottom: 30px;
   background: #ffffff;
   position: relative;
@@ -507,6 +508,12 @@ header {
 
 .example-list-item:hover {
   box-shadow: 1px 4px 6px rgba(0, 0, 0, 0.16), 0px 4px 4px rgba(0, 0, 0, 0.06), 0px 1px 1px rgba(0, 0, 0, 0.12);
+}
+
+@media screen and (min-width: 480px) {
+  .example-list-item {
+    width: 450px;
+  }
 }
 
 @media screen and (min-width: 768px) {
@@ -775,14 +782,21 @@ footer .form-label {
 }
 
 .footer-input {
-  width: 450px;
-  height: 50px;
   padding-left: 16px;
   border-radius: 4px;
   border: 1px solid rgba(255, 255, 255, 0.3);
   color: #ffffff;
   outline: none;
   background-color: #2f303a;
+  width: 100%;
+  height: 50px;
+}
+
+@media screen and (min-width: 480px) {
+  .footer-input {
+    width: 450px;
+    height: 50px;
+  }
 }
 
 @media screen and (min-width: 1200px) {
@@ -804,13 +818,19 @@ footer .form-label {
   position: relative;
   text-align: center;
   align-items: center;
-  width: 200px;
+  width: 25%;
   height: 50px;
   border: none;
   margin: 0 auto;
   padding-top: 13px;
   padding-bottom: 13px;
   padding-left: 26px;
+}
+
+@media screen and (min-width: 480px) {
+  .button-sign-up {
+    width: 200px;
+  }
 }
 
 @media screen and (min-width: 1200px) {
