--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -148,8 +148,6 @@ footer .form-label {
 }
 
 .footer-input {
-  width: 450px;
-  height: 50px;
   padding-left: 16px;
   border-radius: 4px;
   border: 1px solid rgba(255, 255, 255, 0.3);
@@ -157,6 +155,13 @@ footer .form-label {
   outline: none;
 
   background-color: #2f303a;
+  width: 100%;
+  height: 50px;
+
+  @include phone() {
+    width: 450px;
+    height: 50px;
+  }
 
   @include desktop() {
     width: 358px;
@@ -179,13 +184,17 @@ footer .form-label {
     position: relative;
     text-align: center;
     align-items: center;
-    width: 200px;
+    width: 25%;
     height: 50px;
     border: none;
     margin: 0 auto;
     padding-top: 13px;
     padding-bottom: 13px;
     padding-left: 26px;
+
+    @include phone() {
+      width: 200px;
+    }
 
     @include desktop() {
       margin-left: 12px;
