--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -21,13 +21,11 @@
 }
 
 .modal {
+  width: 100%;
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%) scaleX(0);
-
-  height: 609px;
-  width: 450px;
   padding: 40px;
 
   background: #ffffff;
@@ -35,6 +33,10 @@
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
 
+  @include phone() {
+    height: 609px;
+    width: 450px;
+  }
   @include desktop() {
     min-height: 581px;
     min-width: 528px;
@@ -82,15 +84,18 @@
 }
 
 .form-input {
-  width: 370px;
+  width: 100%;
   height: 40px;
   padding-left: 42px;
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
 
+  @include phone() {
+    width: 370px;
+  }
+
   @include desktop() {
     width: 448px;
-    height: 40px;
   }
 }
 
