--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -545,7 +545,7 @@ header {
   display: flex;
   align-items: center;
   position: absolute;
-  transform: translateY(102%);
+  transform: translateY(110%);
   top: 0;
   left: 0;
   width: 100%;
@@ -554,6 +554,12 @@ header {
   justify-content: center;
   padding: 77px 24px;
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+@media screen and (min-width: 480px) {
+  .overlay {
+    transform: translateY(102%);
+  }
 }
 
 @media screen and (min-width: 768px) {
@@ -601,10 +607,15 @@ header {
 }
 
 .animation {
-  width: 402px;
-  font-size: 18px;
+  font-size: 14px;
   line-height: 1.56;
   color: #ffffff;
+}
+
+@media screen and (min-width: 480px) {
+  .animation {
+    width: 402px;
+  }
 }
 
 .example-list-item:hover .animation {
