--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -21,19 +21,27 @@
 }
 
 .modal {
+  position: fixed;
   width: 100%;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%) scaleX(0);
+  height: 100%;
+  top: 0;
+  left: 0;
+  transform: scaleX(0);
   padding: 40px;
-
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   background: #ffffff;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
 
   @include phone() {
+    position: absolute;
+    transform: translate(-50%, -50%) scaleX(0);
+
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1),
+      transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    top: 50%;
+    left: 50%;
     height: 609px;
     width: 450px;
   }
@@ -44,9 +52,22 @@
 }
 
 .modal.is-open {
-  transform: translate(-50%, -50%) scaleX(1);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  transform: scaleX(1);
+
+  @include phone() {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    height: 609px;
+    width: 450px;
+
+    transform: translate(-50%, -50%) scaleX(1);
+  }
 }
 
 .button-modal {
