--- a/sass/portfolio/_main-section.scss
+++ b/sass/portfolio/_main-section.scss
@@ -131,7 +131,7 @@
   display: flex;
   align-items: center;
   position: absolute;
-  transform: translateY(102%);
+  transform: translateY(110%);
   top: 0;
   left: 0;
   width: 100%;
@@ -142,6 +142,9 @@
 
   transition: transform 250ms $cubic-timing;
 
+  @include phone() {
+    transform: translateY(102%);
+  }
   @include tablet() {
     padding: 49px 24px;
   }
@@ -185,10 +188,12 @@
 }
 
 .animation {
-  width: 402px;
-  font-size: 18px;
+  font-size: 14px;
   line-height: 1.56;
   color: #ffffff;
+  @include phone() {
+    width: 402px;
+  }
 
   .example-list-item:hover & {
     opacity: 1;
